# automacao-mandeumzap

./: .gitignore  README.md  pyproject.toml
automacao_mandeumzap/: main.py
automacao_mandeumzap/utils/: elements_identifiers.py
